--- a/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Parametro.xhtml
@@ -10,7 +10,8 @@
     <h:body>
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
-                <h:form id="form">            
+                <h:form id="form">
+                    <p:growl id="growl" showDetail="true"/>
                     <p:panel  id="PanelTotal" header="Parametros de liquidación" style=" font-size: 12px; position: absolute; width: 874px; height: 530px;" >  
 
                         <fieldset style="position: absolute; left: 5px; top: 70px; font-size: 11px; width: 835px; height: 100px; border-radius: 10px; ">
@@ -69,13 +70,13 @@
                                     <p:ajax event="change" listener="#{controlParametro.autocompletar('PROCESO', controlParametro.parametroLiquidacion.proceso.descripcion)}"/>
                                 </p:inputText>
                             </p:panel>
-                            <p:commandButton value="[ Adicionar los empleados a liquidar ]" style=" font-size: 15px; font-family: 'Book Antiqua'; font-weight: bold; position: absolute; top: 67px; left: 521px; width: 320px" actionListener="#{controlParametro.validacionesAdicionarEmpleados()}" process="@this" />
+                            <p:commandButton value="[ Adicionar los empleados a liquidar ]" style=" font-size: 15px; font-family: 'Book Antiqua'; font-weight: bold; position: absolute; top: 67px; left: 521px; width: 320px" actionListener="#{controlParametro.validarGuardado('ADICIONAR EMPLEADOS')}" process="@this" />
                         </fieldset>
 
                         <p:toolbar style="font-size: 12px; position: absolute; top: 35px; left: 12px; height: 23px">   
                             <p:toolbarGroup align="left"> 
 
-                                <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlParametro.validarGuardadoRapido()}" process="@this" />
+                                <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlParametro.validarGuardado('GUARDADO RAPIDO')}" process="@this" />
                                 <p:tooltip style="font-size: 12px" for="guardarRapido" value="Guardar" />
                                 <p:commandButton id="editar" value="" style="background-image: url(Imagenes/editar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlParametro.editarCelda()}" process="@this"/>
                                 <p:tooltip style="font-size: 12px" for="editar" value="Editar" />
@@ -106,7 +107,7 @@
                         <fieldset style="position: absolute; left: 5px; top: 190px; font-size: 11px; width: 835px; height: 290px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>Empleados a liquidar</strong></legend>
 
-                            <p:dataTable id="empleadosParametros" var="empleadoParametro" rowKey="#{empleadoParametro.secuencia}" rowIndexVar="indice" style="font-size: 12px; border: 1px;"                            
+                            <p:dataTable id="empleadosParametros" var="empleadoParametro" rowKey="#{empleadoParametro.secuencia}" rowIndexVar="indice" style="font-size: 12px; border: 1px; width: 825px"                            
                                          value="#{controlParametro.empleadosParametros}" scrollable="true" scrollHeight="#{controlParametro.altoTabla}" scrollWidth="840"
                                          filteredValue="#{controlParametro.filtradoEmpleadosParametros}" emptyMessage="No se encontrarón resultados."
                                          editable="true" editMode="cell" liveScroll="true" scrollRows="30">
@@ -115,18 +116,18 @@
                                     <p:commandButton value="Quitar >" actionListener="#{controlParametro.eliminarParametros(indice)}" style="font-size: 10px; border-radius: 0px" process="@this" />
                                 </p:column>  
 
-                                <p:column headerText="Desde" sortBy="#{empleadoParametro.fechadesdecausado}" filterBy="#{empleadoParametro.fechadesdecausado}" filterMatchMode="contains"  width="60" id="FechaDesde" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column headerText="Desde" sortBy="#{empleadoParametro.parametroestructura.fechadesdecausado}" filterBy="#{empleadoParametro.parametroestructura.fechadesdecausado}" filterMatchMode="contains"  width="60" id="FechaDesde" filterStyle="display: none; visibility: hidden;"  >  
                                     <f:facet name="header"> 
                                         <h:outputText value="Desde" />
                                     </f:facet>
                                     <p:cellEditor>  
                                         <f:facet name="output">
-                                            <h:outputText value="#{empleadoParametro.fechadesdecausado}" >
+                                            <h:outputText value="#{empleadoParametro.parametroestructura.fechadesdecausado}" >
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText  value="#{empleadoParametro.fechadesdecausado}" readonly="true"
+                                            <p:inputText  value="#{empleadoParametro.parametroestructura.fechadesdecausado}" readonly="true"
                                                           onfocus="ubicacionTabla(([{name: 'CAMPO', value: 'DESDE'}, {name: 'INDICE', value: '#{indice}'}]));">
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </p:inputText>
@@ -134,18 +135,18 @@
                                     </p:cellEditor>
                                 </p:column>
 
-                                <p:column headerText="Hasta" sortBy="#{empleadoParametro.fechahastacausado}" filterBy="#{empleadoParametro.fechahastacausado}" filterMatchMode="contains"  width="60" id="FechaHasta" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column headerText="Hasta" sortBy="#{empleadoParametro.parametroestructura.fechahastacausado}" filterBy="#{empleadoParametro.parametroestructura.fechahastacausado}" filterMatchMode="contains"  width="60" id="FechaHasta" filterStyle="display: none; visibility: hidden;"  >  
                                     <f:facet name="header">
                                         <h:outputText value="Hasta" />
                                     </f:facet>
                                     <p:cellEditor>  
                                         <f:facet name="output">
-                                            <h:outputText value="#{empleadoParametro.fechahastacausado}" >
+                                            <h:outputText value="#{empleadoParametro.parametroestructura.fechahastacausado}" >
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText  value="#{empleadoParametro.fechahastacausado}" readonly="true" 
+                                            <p:inputText  value="#{empleadoParametro.parametroestructura.fechahastacausado}" readonly="true" 
                                                           onfocus="ubicacionTabla(([{name: 'CAMPO', value: 'HASTA'}, {name: 'INDICE', value: '#{indice}'}]));">
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </p:inputText>
@@ -216,15 +217,17 @@
                             <p:commandButton style="position: absolute; left: 9px; top: 270px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" disabled="#{controlParametro.borrarTodos}" id="quitarTodos" value="Quitar todos" actionListener="#{controlParametro.borrarParametros()}" process="@this"/>
                             <p:commandButton style="position: absolute; left: 102px; top: 270px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="cambiosMasivos" value="Cambios masivos" process="@this"/>
                             <p:commandButton style="position: absolute; left: 226px; top: 270px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="verificarEmpleados" value="Verificar Empleados" process="@this"/>
+                            <p:commandButton style="position: absolute; left: 700px; top: 270px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="adicionarEmpleado" value="Adicionar Empleado" onclick="buscarEmpleadoDialogo.show();" process="@this"/>
                         </fieldset>
                         <p:commandButton style="position: absolute; left: 9px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlParametro.salir()}" update="panelParametro, empleadosParametros, quitarTodos"  process="@this" />
-                        <p:commandButton style="position: absolute; left: 717px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="aceptar" disabled="#{controlParametro.guardado}" value="Aceptar" icon="ui-icon-check"  actionListener="#{controlParametro.validarGuardado()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 717px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="aceptar" disabled="#{controlParametro.guardado}" value="Aceptar" icon="ui-icon-check"  onclick="confirmarGuardar.show();" process="@this" />
                         <p:commandButton style="position: absolute; left: 800px; top: 498px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlParametro.salir()}" action="nomina" process="@this" />
                     </p:panel>
 
                     <p:remoteCommand name="llamarLov" actionListener="#{controlParametro.llamarLov()}" process="@this"/>
                     <p:remoteCommand name="ubicacionC" actionListener="#{controlParametro.ubicacionCampo()}" process="@this"/>
                     <p:remoteCommand name="ubicacionTabla" actionListener="#{controlParametro.ubicacionCampoTabla()}" process="@this"/>
+                    <p:remoteCommand name="salirGuardado" action="nomina" process="@this"/>
                 </h:form>
                 <h:form id="formularioDialogos">
                     <p:dialog header="Estructuras" widgetVar="estructurasDialogo" draggable="false" resizable="false" id="estructurasDialogo"  
@@ -320,6 +323,46 @@
                         </p:commandButton>
                     </p:dialog>
 
+                    <p:dialog id="buscarEmpleadoDialogo" header="Empleados" widgetVar="buscarEmpleadoDialogo"  resizable="false" draggable="false" modal="true" height="300"  width="732" style="font-size: 12px" closable="false">  
+                        <p:dataTable  id="lovEmpleados" style="font-size: 11px; width: 700px" var="empleado" value="#{controlParametro.lovEmpleados}"
+                                      scrollable="true" scrollHeight="162" scrollWidth="720" widgetVar="lovEmpleados" 
+                                      filteredValue="#{controlParametro.filtradoLovEmpleados}" emptyMessage="No se encontraron resultados con el criterio de busqueda."
+                                      rowKey="#{empleado.secuencia}" selection="#{controlParametro.seleccionEmpleado}" selectionMode="single" >
+
+                            <p:ajax event="rowSelect" listener="#{controlParametro.activarAceptar()}" update=":formularioDialogos:aceptarEm"/>
+                            <p:ajax event="rowDblselect" listener="#{controlParametro.seleccionarEmpleado()}" process="@this" onstart="lovEmpleados.clearFilters()"/>
+
+                            <f:facet name="header" >  
+                                <h:outputText value="Buscar Empleado: "  style="position: absolute; left: 22px; top: 18px;"/>  
+                                <p:inputText id="globalFilter" onkeyup="lovEmpleados.filter();" style="width:150px; position: relative; left: -150px;"/>
+                                <p:watermark for="globalFilter" value="Ingresar valor a buscar" />
+                            </f:facet>
+
+                            <p:column  headerText="Codigo Empleado" filterOptions="" filterBy="#{empleado.codigoempleado}" filterMatchMode="contains">  
+                                <h:outputText value="#{empleado.codigoempleado}" />  
+                            </p:column>  
+
+                            <p:column headerText="Primer Apellido" filterBy="#{empleado.persona.primerapellido}" filterMatchMode="contains">  
+                                <h:outputText value="#{empleado.persona.primerapellido}" />  
+                            </p:column>  
+
+                            <p:column headerText="Segundo Apellido" filterBy="#{empleado.persona.segundoapellido}" filterMatchMode="contains" >  
+                                <h:outputText value="#{empleado.persona.segundoapellido}" />  
+                            </p:column>  
+
+                            <p:column headerText="Nombre" width="160" filterBy="#{empleado.persona.nombre}" filterMatchMode="contains">  
+                                <h:outputText value="#{empleado.persona.nombre}" />  
+                            </p:column> 
+                        </p:dataTable> 
+
+                        <p:commandButton id="aceptarEm" style="position: relative; left: 567px" value="Aceptar" disabled="#{controlParametro.aceptar}" actionListener="#{controlParametro.seleccionarEmpleado()}" update="aceptarEm" process="@this">
+                            <p:resetInput target=":formularioDialogos:lovEmpleados:globalFilter"/>
+                        </p:commandButton>
+                        <p:commandButton id="atras" style="position: relative; left: 567px" value="Atras" onclick="buscarEmpleadoDialogo.hide(), lovEmpleados.clearFilters();" actionListener="#{controlParametro.cancelarSeleccionEmpleado()}" update="lovEmpleados, aceptarEm" process="@this">
+                            <p:resetInput target=":formularioDialogos:lovEmpleados:globalFilter"/>
+                        </p:commandButton>
+                    </p:dialog>
+
                     <p:dialog id="editarFechaDesde" header="Fecha desde" widgetVar="editarFechaDesde" resizable="false" closable="true" draggable="false" modal="true" height="55" width="240" style="font-size: 12px; padding: 0px">  
                         <p:inputTextarea value="#{controlParametro.parametroLiquidacion.fechadesdecausado}" style="overflow: auto; width: 200px; height: 40px" readonly="true">
                             <f:convertDateTime pattern="dd/MM/yyyy" />
@@ -361,13 +404,13 @@
                     <!-- EDITOR TABLA -->
 
                     <p:dialog id="editarDesde" header="Fecha desde" widgetVar="editarDesde" resizable="false" closable="true" draggable="false" modal="true" height="55" width="240" style="font-size: 12px; padding: 0px">  
-                        <p:inputTextarea value="#{controlParametro.editarEmpleadosParametros.fechadesdecausado}" style="overflow: auto; width: 200px; height: 40px" readonly="true">
+                        <p:inputTextarea value="#{controlParametro.editarEmpleadosParametros.parametroestructura.fechadesdecausado}" style="overflow: auto; width: 200px; height: 40px" readonly="true">
                             <f:convertDateTime pattern="dd/MM/yyyy" />
                         </p:inputTextarea>
                     </p:dialog>
 
                     <p:dialog id="editarHasta" header="Fecha hasta" widgetVar="editarHasta" resizable="false" closable="true" draggable="false" modal="true" height="55" width="240" style="font-size: 12px; padding: 0px">  
-                        <p:inputTextarea value="#{controlParametro.editarEmpleadosParametros.fechahastacausado}" style="overflow: auto; width: 200px; height: 40px" readonly="true">
+                        <p:inputTextarea value="#{controlParametro.editarEmpleadosParametros.parametroestructura.fechahastacausado}" style="overflow: auto; width: 200px; height: 40px" readonly="true">
                             <f:convertDateTime pattern="dd/MM/yyyy" />
                         </p:inputTextarea>
                     </p:dialog>
@@ -408,14 +451,14 @@
                         <p:commandButton value="Aceptar" onclick="errorDias.hide();" actionListener="#{controlParametro.guardarCambios()}" style="position: absolute; top: 115px; left: 220px; " process="@this" />
                         <p:commandButton value="Cancelar" onclick="errorDias.hide();" style="position: absolute; top: 115px; left: 292px" process="@this" />
                     </p:dialog>
-                    
-                    <p:dialog id="errorDiasSalir" header="ATENCIÓN...!" widgetVar="errorDiasSalir"  resizable="false" draggable="false" modal="true" height="149" width="460px" style="font-size: 12px" closable="false">  
+
+                    <p:dialog id="alertaFechas" header="ATENCIÓN...!" widgetVar="alertaFechas"  resizable="false" draggable="false" modal="true" height="109" width="400px" style="font-size: 12px" closable="false">  
                         <h:graphicImage value="Imagenes/alerta.jpg" width="110" height="80" style="position: absolute; left: 5px; top: 20px;"  />
                         <h:outputText value="Esta ingresando fechas de la novedad (Desde - Hasta) con un rango superior a un mes (30 días). 
                                       Cerciórese que esto es correcto. Recuerde que deben corresponder a la minima unidad de liquidación." style="position: absolute; left: 110px; top: 20px; width: 330px; text-align: justify" />
                         <h:outputText value="¿Desea continuar?" style="position: absolute; left: 100px; top: 85px; width: 360px; font-weight:bold; text-align: center" />
-                        <p:commandButton value="Aceptar" onclick="errorDiasSalir.hide(); confirmarGuardar.show();" style="position: absolute; top: 115px; left: 220px; " process="@this" />
-                        <p:commandButton value="Cancelar" onclick="errorDiasSalir.hide();" style="position: absolute; top: 115px; left: 292px" process="@this" />
+                        <p:commandButton value="Aceptar" onclick="alertaFechas.hide();" actionListener="#{controlParametro.seguirErrorFechas()}" style="position: absolute; top: 75px; left: 220px; " process="@this" />
+                        <p:commandButton value="Cancelar" onclick="alertaFechas.hide();" style="position: absolute; top: 75px; left: 292px" process="@this" />
                     </p:dialog>
 
                     <p:dialog id="errorFechas" header="ATENCIÓN...!" widgetVar="errorFechas"  resizable="false" draggable="false" modal="true" height="109" width="400px" style="font-size: 12px" closable="false">  
