--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -565,7 +565,7 @@
 
                             </p:tab> 
 
-                            <p:tab title="Gerencial" id="Gerencial" > 
+                            <p:tab title="#{msg['gerencial']}" id="Gerencial" > 
 
                                 <h:outputText style="position: absolute; font-size: 11px; font-weight: bold; left: 365px; top: 30px; width: 475px; text-align: right; color: #BF1A1A" value="#{msg['periodoeneltiempodesde']} #{controlRemoto.fechaDesde} #{msg['hasta']} #{controlRemoto.fechaHasta} #{msg['corteal']} #{controlRemoto.fechaSistema}"/>
 
