--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -803,7 +803,7 @@
                         </p:commandButton>
                     </p:dialog>
 
-                    <!-- LOV FORMULAS-->
+                    <!-- LOV TABLAS-->
                     <p:dialog header="#{msg['buscarTabla']}" widgetVar="buscarTablasDialogo" draggable="false" resizable="false" closable="false" id="buscarTablasDialogo"  
                               showEffect="fade" hideEffect="fade" width="541" modal="true">
                         <p:dataTable id="lovTablas" style="width: 510px" var="tabla" value="#{controlRemoto.listTablasLOV}" rowKey="#{tabla.secuencia}"
